[project]
name = "er-aws-elasticache"
version = "0.1.0"
description = "ERv2 module for managing AWS Elasticache clusters"
authors = [{ name = "AppSRE", email = "sd-app-sre@redhat.com" }]
license = { text = "MIT License" }
readme = "README.md"
requires-python = ">= 3.11"
dependencies = [
    # AWS provider 5.60.0 https://github.com/cdktf/cdktf-provider-aws/releases/tag/v19.28.0
    "boto3>=1.35.47",
    # AWS provider 5.60.0 https://github.com/cdktf/cdktf-provider-aws/releases/tag/v19.28.0
    "cdktf-cdktf-provider-aws ==19.28.0",
    # Random provider 3.6.3 https://github.com/cdktf/cdktf-provider-random/releases/tag/v11.0.3
    "cdktf-cdktf-provider-random ==11.0.3",
    "external-resources-io ~=0.3.2",
    "pydantic ~=2.8.0",
]

[project.urls]
homepage = "https://github.com/app-sre/er-aws-elasticache"
repository = "https://github.com/app-sre/er-aws-elasticache"
documentation = "https://github.com/app-sre/er-aws-elasticache"

[tool.uv]
dev-dependencies = [
    "ruff ==0.7.0",
    "mypy ~=1.11",
    "pytest ~=8.2.0",
    "pytest-cov ~=5.0.0",
    "boto3-stubs-lite[elasticache,ec2]>=1.35.46",
]
[project.scripts]
er-aws-elasticache = 'er_aws_elasticache.__main__:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["er_aws_elasticache"]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = 'py311'
src = ["er_aws_elasticache"]
extend-exclude = [
    ".local", # used by poetry in local venv
    ".cache", # used by poetry in local venv
]
fix = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "CPY",    # Missing copyright header
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
    "D203",   # 1 blank line required before class docstring
    "D211",   # No blank lines allowed before class docstring
    "D212",   # multi-line-summary-first-line
    "D213",   # multi-line-summary-second-line
    "D4",     # Doc string style
    "E501",   # Line too long
    "G004",   # Logging statement uses string formatting
    "S101",   # Use of assert detected. Pytest uses assert
    "EM101",
    "EM102",
    "TRY003",
    # pydoclint
    "DOC",
    # May conflict with the formatter, https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",
    "COM812",
    "COM819",
    "ISC001",
]
[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["er_aws_elasticache"]

# Mypy configuration
[tool.mypy]
files = ["er_aws_elasticache", "tests"]
enable_error_code = ["truthy-bool", "redundant-expr"]
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Coverage configuration
[tool.coverage.run]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 88
